Completed project-list template

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -35,27 +35,152 @@
             </div>
         </div>
 
-        <div class="list">
-            <div class="list--checkbox">
-                <div class="container">
-
+        <ul class="main">
+            <li class="list">
+                <div class="list--checkbox">
+                    <form>
+                        <input class="list--checkbox__input" type="checkbox" id="task-checkbox-1" />
+                        <label class="list--checkbox__label" for="task-checkbox-1"></label>
+                    </form>
                 </div>
-            </div>
-            <div class="list--item">
-                <div class="list--item--task">
-                    <div class="container">
-                        <p class="list--item--task__title">TITLE</p>
-                        <p class="list--item--task__category list--item--task__category_by-date">CATEGORY</p>
+                <div class="list--item">
+                    <div class="list--item--task">
+                        <p class="list--item--task__title">Lesson</p>
+                        <p class="list--item--task__category list--item--task__category_by-date">28 Mar</p>
+                    </div>
+                    <div class="list--item--time">
+                        <p class="list--item--time__due list--item--time__due_none"></p>
+                        <p class="list--item--time__estimation list--item--time__estimation_none"></p>
                     </div>
                 </div>
-                <div class="list--item--time">
-                    <div class="container">
-                        <p class="list--item--time__due">DUE</p>
-                        <p class="list--item--time__estimation">ESTIMATION</p>
+            </li>
+            <li class="list">
+                <div class="list--checkbox">
+                    <form>
+                        <input class="list--checkbox__input" type="checkbox" id="task-checkbox-2" />
+                        <label class="list--checkbox__label" for="task-checkbox-2"></label>
+                    </form>
+                </div>
+                <div class="list--item">
+                    <div class="list--item--task">
+                        <p class="list--item--task__title">Do the home work</p>
+                        <p class="list--item--task__category list--item--task__category_by-date">29 Mar</p>
+                    </div>
+                    <div class="list--item--time">
+                        <p class="list--item--time__due list--item--time__due_none"></p>
+                        <p class="list--item--time__estimation list--item--time__estimation_none"></p>
                     </div>
                 </div>
-            </div>
-        </div>
+            </li>
+            <li class="list">
+                <div class="list--checkbox">
+                    <form>
+                        <input class="list--checkbox__input" type="checkbox" id="task-checkbox-3" />
+                        <label class="list--checkbox__label" for="task-checkbox-3"></label>
+                    </form>
+                </div>
+                <div class="list--item">
+                    <div class="list--item--task">
+                        <p class="list--item--task__title">Buy foon in Wallmart</p>
+                        <p class="list--item--task__category list--item--task__category_by-date">31 Mar</p>
+                    </div>
+                    <div class="list--item--time">
+                        <p class="list--item--time__due">19:00</p>
+                        <p class="list--item--time__estimation list--item--time__estimation_none"></p>
+                    </div>
+                </div>
+            </li>
+            <li class="list">
+                <div class="list--checkbox">
+                    <form>
+                        <input class="list--checkbox__input" type="checkbox" id="task-checkbox-4" />
+                        <label class="list--checkbox__label" for="task-checkbox-4"></label>
+                    </form>
+                </div>
+                <div class="list--item">
+                    <div class="list--item--task">
+                        <p class="list--item--task__title">Lesson</p>
+                        <p class="list--item--task__category list--item--task__category_none"></p>
+                    </div>
+                    <div class="list--item--time">
+                        <p class="list--item--time__due list--item--time__due_none"></p>
+                        <p class="list--item--time__estimation">12:43:34</p>
+                    </div>
+                </div>
+            </li>
+            <li class="list">
+                <div class="list--checkbox">
+                    <form>
+                        <input class="list--checkbox__input" type="checkbox" id="task-checkbox-5" />
+                        <label class="list--checkbox__label" for="task-checkbox-5"></label>
+                    </form>
+                </div>
+                <div class="list--item">
+                    <div class="list--item--task">
+                        <p class="list--item--task__title">Do the home work</p>
+                        <p class="list--item--task__category list--item--task__category_none"></p>
+                    </div>
+                    <div class="list--item--time">
+                        <p class="list--item--time__due list--item--time__due_none"></p>
+                        <p class="list--item--time__estimation list--item--time__estimation_none"></p>
+                    </div>
+                </div>
+            </li>
+            <li class="list">
+                <div class="list--checkbox">
+                    <form>
+                        <input class="list--checkbox__input" type="checkbox" id="task-checkbox-6" />
+                        <label class="list--checkbox__label" for="task-checkbox-6"></label>
+                    </form>
+                </div>
+                <div class="list--item">
+                    <div class="list--item--task">
+                        <p class="list--item--task__title">Buy foon in Wallmart</p>
+                        <p class="list--item--task__category list--item--task__category_by-date">31 Mar</p>
+                    </div>
+                    <div class="list--item--time">
+                        <p class="list--item--time__due">19:00</p>
+                        <p class="list--item--time__estimation list--item--time__estimation_none"></p>
+                    </div>
+                </div>
+            </li>
+            <li class="list">
+                <div class="list--checkbox">
+                    <form>
+                        <input class="list--checkbox__input" type="checkbox" id="task-checkbox-7" />
+                        <label class="list--checkbox__label" for="task-checkbox-7"></label>
+                    </form>
+                </div>
+                <div class="list--item">
+                    <div class="list--item--task">
+                        <p class="list--item--task__title">Lesson</p>
+                        <p class="list--item--task__category list--item--task__category_none"></p>
+                    </div>
+                    <div class="list--item--time">
+                        <p class="list--item--time__due list--item--time__due_none"></p>
+                        <p class="list--item--time__estimation">12:43:34</p>
+                    </div>
+                </div>
+            </li>
+            <li class="list">
+                <div class="list--checkbox">
+                    <form>
+                        <input class="list--checkbox__input" type="checkbox" id="task-checkbox-8" />
+                        <label class="list--checkbox__label" for="task-checkbox-8"></label>
+                    </form>
+                </div>
+                <div class="list--item">
+                    <div class="list--item--task">
+                        <p class="list--item--task__title">Do the home work</p>
+                        <p class="list--item--task__category list--item--task__category_none"></p>
+                    </div>
+                    <div class="list--item--time">
+                        <p class="list--item--time__due list--item--time__due_none"></p>
+                        <p class="list--item--time__estimation list--item--time__estimation_none"></p>
+                    </div>
+                </div>
+            </li>
+        </ul>
 
     </div>
 </div>
