[BEM] - Added task-item buttons

--- a/src/html/blocks/task-item.html
+++ b/src/html/blocks/task-item.html
@@ -34,4 +34,20 @@
         </span>
         }
     </div>
+
+    <div class="task-item__buttons task-item__buttons@@buttons_mod">
+        <button class="button color_green task-item__edit">
+            <i class="icon icon_pencil">
+            </i>
+            <br/>
+            edit
+        </button>
+
+        <button class="button color_blue task-item__start">
+            <i class="icon icon_triangle">
+            </i>
+            <br/>
+            start
+        </button>
+    </div>
 </li>
