--- a/src/html/pages/week/today-task-list.html
+++ b/src/html/pages/week/today-task-list.html
@@ -9,7 +9,8 @@
     "project_color": "color_green",
     "checkbox_mod" : "_checked",
     "notification" : "17:00",
-    "access_time" : "12:43:34"
+    "access_time" : "12:43:34",
+    "buttons_mod" : "_active"
     })
 
     @@include('../../blocks/task-item.html',{
