--- a/src/project-task-list.html
+++ b/src/project-task-list.html
@@ -5,9 +5,15 @@
 </head>
 <body>
 
-<div class="page">
-    @@include('./html/blocks/header.html', {"color" : "blue", "title" : "work", "title_icon": true})
-    @@include('./html/pages/project/task-list.html')
+<div class="container" style="display: table;">
+
+    @@include('./html/blocks/menu/menu.html')
+
+    <div class="page">
+        @@include('./html/blocks/header.html', {"color" : "blue", "title" : "work", "title_icon": true})
+        @@include('./html/pages/project/task-list.html')
+    </div>
+
 </div>
 
 </body>
