[Create html layouts] Added hover and active to  week-task-list.h

--- a/src/task-list.html
+++ b/src/task-list.html
@@ -53,6 +53,10 @@
                         <p class="list--item--time__estimation">12:43:34</p>
                     </div>
                 </div>
+                <div class="hover hover_none">
+                    <button class="hover--action hover--action_start"></button>
+                    <button class="hover--action hover--action_edit"></button>
+                </div>
             </li>
             <li class="list">
                 <div class="list--checkbox">
@@ -70,6 +74,10 @@
                         <p class="list--item--time__due list--item--time__due_none"></p>
                         <p class="list--item--time__estimation list--item--time__estimation_none"></p>
                     </div>
+                </div>
+                <div class="hover hover_none">
+                    <button class="hover--action hover--action_start"></button>
+                    <button class="hover--action hover--action_edit"></button>
                 </div>
             </li>
             <li class="list">
@@ -89,6 +97,10 @@
                         <p class="list--item--time__estimation list--item--time__estimation_none"></p>
                     </div>
                 </div>
+                <div class="hover hover_none">
+                    <button class="hover--action hover--action_start"></button>
+                    <button class="hover--action hover--action_edit"></button>
+                </div>
             </li>
             <li class="list">
                 <div class="list--checkbox">
@@ -106,6 +118,10 @@
                         <p class="list--item--time__due list--item--time__due_none"></p>
                         <p class="list--item--time__estimation">12:43:34</p>
                     </div>
+                </div>
+                <div class="hover hover_none">
+                    <button class="hover--action hover--action_start"></button>
+                    <button class="hover--action hover--action_edit"></button>
                 </div>
             </li>
             <li class="list">
@@ -125,6 +141,10 @@
                         <p class="list--item--time__estimation list--item--time__estimation_none"></p>
                     </div>
                 </div>
+                <div class="hover hover_none">
+                    <button class="hover--action hover--action_start"></button>
+                    <button class="hover--action hover--action_edit"></button>
+                </div>
             </li>
             <li class="list">
                 <div class="list--checkbox">
@@ -143,6 +163,10 @@
                         <p class="list--item--time__estimation list--item--time__estimation_none"></p>
                     </div>
                 </div>
+                <div class="hover hover_none">
+                    <button class="hover--action hover--action_start"></button>
+                    <button class="hover--action hover--action_edit"></button>
+                </div>
             </li>
             <li class="list">
                 <div class="list--checkbox">
@@ -160,6 +184,10 @@
                         <p class="list--item--time__due list--item--time__due_none"></p>
                         <p class="list--item--time__estimation">12:43:34</p>
                     </div>
+                </div>
+                <div class="hover hover_none">
+                    <button class="hover--action hover--action_start"></button>
+                    <button class="hover--action hover--action_edit"></button>
                 </div>
             </li>
         </ul>
