--- a/src/week-task-list.html
+++ b/src/week-task-list.html
@@ -19,7 +19,7 @@
         <div class="head head_grey">
             <div class="head--nav">
                 <div class="container">
-                    <button class="button-nav button-nav_grey"></button>
+                    <button class="button-nav button-nav_hovered"></button>
                 </div>
             </div>
             <div class="head--title">
@@ -30,7 +30,7 @@
             </div>
             <div class="head--add">
                 <div class="container">
-                    <button class="button-add button-add_grey"></button>
+                    <button class="button-add button-add_hovered"></button>
                 </div>
             </div>
         </div>
@@ -95,6 +95,10 @@
                             <p class="list--item--time__estimation">12:43:34</p>
                         </div>
                     </div>
+                    <div class="hover">
+                        <button class="hover--action hover--action_start"></button>
+                        <button class="hover--action hover--action_edit"></button>
+                    </div>
                 </li>
                 <li class="list">
                     <div class="list--checkbox">
@@ -112,6 +116,10 @@
                             <p class="list--item--time__due list--item--time__due_none"></p>
                             <p class="list--item--time__estimation list--item--time__estimation_none"></p>
                         </div>
+                    </div>
+                    <div class="hover hover_none">
+                        <button class="hover--action hover--action_start"></button>
+                        <button class="hover--action hover--action_edit"></button>
                     </div>
                 </li>
                 <li class="list">
@@ -131,6 +139,10 @@
                             <p class="list--item--time__estimation list--item--time__estimation_none"></p>
                         </div>
                     </div>
+                    <div class="hover hover_none">
+                        <button class="hover--action hover--action_start"></button>
+                        <button class="hover--action hover--action_edit"></button>
+                    </div>
                 </li>
                 <li class="list">
                     <div class="list--checkbox">
@@ -148,6 +160,10 @@
                             <p class="list--item--time__due list--item--time__due_none"></p>
                             <p class="list--item--time__estimation">12:43:34</p>
                         </div>
+                    </div>
+                    <div class="hover hover_none">
+                        <button class="hover--action hover--action_start"></button>
+                        <button class="hover--action hover--action_edit"></button>
                     </div>
                 </li>
             </ul>
@@ -173,6 +189,10 @@
                             <p class="list--item--time__estimation_none">12:43:34</p>
                         </div>
                     </div>
+                    <div class="hover hover_none">
+                        <button class="hover--action hover--action_start"></button>
+                        <button class="hover--action hover--action_edit"></button>
+                    </div>
                 </li>
                 <li class="list">
                     <div class="list--checkbox">
@@ -191,6 +211,10 @@
                             <p class="list--item--time__estimation list--item--time__estimation_none"></p>
                         </div>
                     </div>
+                    <div class="hover hover_none">
+                        <button class="hover--action hover--action_start"></button>
+                        <button class="hover--action hover--action_edit"></button>
+                    </div>
                 </li>
                 <li class="list">
                     <div class="list--checkbox">
@@ -208,6 +232,10 @@
                             <p class="list--item--time__due">19:00</p>
                             <p class="list--item--time__estimation list--item--time__estimation_none"></p>
                         </div>
+                    </div>
+                    <div class="hover hover_none">
+                        <button class="hover--action hover--action_start"></button>
+                        <button class="hover--action hover--action_edit"></button>
                     </div>
                 </li>
             </ul>
