--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -1,7 +1,7 @@
-<header class="header color_@@color">
-    <button class="header__menu-button button">
+<header class="header page__header color_@@color">
+    <a href="/" class="header__menu-button button">
         <i class="icon icon_hamburger @@if (color !== 'default') { icon_inverted }"></i>
-    </button>
+    </a>
 
     <span class="header__title @@if(title_icon === true){header__title_project}">
         @@title
