--- a/src/week-task-list.html
+++ b/src/week-task-list.html
@@ -5,13 +5,18 @@
 </head>
 <body>
 
-<div class="page">
+<div class="page page_menu_closed">
+
+    @@include('./html/blocks/menu/menu.html')
     @@include('./html/blocks/header.html', {"color": "default", "title" : "29 mar 2015", "title_icon": false})
 
-    @@include('./html/blocks/week-calendar.html')
-
-    @@include('./html/pages/week/today-task-list.html', {})
-    @@include('./html/pages/week/tomorrow-task-list.html', {})
+    <div class="page__task-list">
+        @@include('./html/blocks/week-calendar.html')
+        @@include('./html/pages/week/today-task-list.html', {})
+        @@include('./html/pages/week/tomorrow-task-list.html', {})
+        <div class="page__task-list-overlap">
+        </div>
+    </div>
 </div>
 
 </body>
