--- a/src/work-task-list.html
+++ b/src/work-task-list.html
@@ -4,7 +4,7 @@
     @@include('./html/_head.html')
 </head>
 <body>
-    <div class="page page_menu_opened">
+    <div class="page page_menu_closed">
         @@include('./html/blocks/menu/menu.html')
         @@include('./html/blocks/header.html', {"color" : "blue", "title" : "work", "title_icon": true})
 
