[BEM] - Change add button to a

--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -7,8 +7,7 @@
         @@title
     </span>
 
-
-    <button class="header__add-task-button button">
+    <a href="#" class="header__add-task-button button">
         <i class="icon icon_plus @@if (color !== 'default') { icon_inverted }"></i>
-    </button>
+    </a>
 </header>
