--- a/src/project-task-list.html
+++ b/src/project-task-list.html
@@ -4,8 +4,10 @@
     @@include('./html/_head.html')
 </head>
 <body>
-    <div class="page page_menu_opened">
-        @@include('./html/blocks/menu/menu.html')
+<div class="page page_menu_opened">
+    @@include('./html/blocks/menu/menu.html')
+
+    <div class="page__main">
         @@include('./html/blocks/header.html', {"color" : "blue", "title" : "work", "title_icon": true})
 
         <div class="page__task-list">
@@ -14,5 +16,6 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
