[BEM] - Remove 'demo only' states file, - moved _closed state from page to menu, - moved overlap from __task-list to __main

--- a/src/html/blocks/menu/menu.html
+++ b/src/html/blocks/menu/menu.html
@@ -1,4 +1,4 @@
-<nav class="menu page__menu">
+<nav class="menu page__menu menu_@@mods">
     <div class="list action-list">
         <a href="#" class="list-item list-item_small menu__settings">
             Settings
