--- a/src/project-task-list.html
+++ b/src/project-task-list.html
@@ -4,16 +4,17 @@
     @@include('./html/_head.html')
 </head>
 <body>
-<div class="page page_menu_opened">
-    @@include('./html/blocks/menu/menu.html')
+<div class="page">
+    @@include('./html/blocks/menu/menu.html', {"mods" : "opened"})
 
     <div class="page__main">
         @@include('./html/blocks/header.html', {"color" : "blue", "title" : "work", "title_icon": true})
 
         <div class="page__task-list">
             @@include('./html/pages/project/task-list.html')
-            <div class="page__task-list-overlap">
-            </div>
+        </div>
+
+        <div class="page__main-overlap">
         </div>
     </div>
 </div>
