--- a/src/task-list.html
+++ b/src/task-list.html
@@ -4,16 +4,17 @@
     @@include('./html/_head.html')
 </head>
 <body>
-<div class="page page_menu_closed">
-    @@include('./html/blocks/menu/menu.html')
+<div class="page">
+    @@include('./html/blocks/menu/menu.html', {"mods" : "closed"})
 
     <div class="page__main">
         @@include('./html/blocks/header.html', {"color": "default", "title" : "29 mar 2015", "title_icon": false})
 
         <div class="page__task-list">
             @@include('./html/pages/today/task-list.html', {})
-            <div class="page__task-list-overlap">
-            </div>
+        </div>
+
+        <div class="page__main-overlap">
         </div>
     </div>
 </div>
