[BEM] - Added html5shiv.js for html5 tags support on ie < 9, - Added respond.js for media querys support on ie < 9

--- a/src/html/_head.html
+++ b/src/html/_head.html
@@ -3,3 +3,7 @@
 <title>Do-While</title>
 <link rel="stylesheet" href="vendor/css/normalize.css"/>
 <link rel="stylesheet" href="css/styles.css"/>
+<!--[if lt IE 9]>
+    <script src="vendor/js/html5shiv.min.js"></script>
+    <script src="vendor/js/respond.min.js"></script>
+<![endif]-->
