[HTML Layouts] Change some styles and add some scripts for week-task-list.html

--- a/src/week-task-list.html
+++ b/src/week-task-list.html
@@ -68,7 +68,7 @@
 			<ul class="tasks">
 				<li class="tasks__header">28 sun</li>
 				<li class="tasks-item tasks-item_project-1">
-					<div class="tasks-item__checkbox">&nbsp;</div>
+					<div class="tasks-item__checkbox tasks-item__checkbox_active">&nbsp;</div>
 					<div class="tasks-item-content">
 						<div class="tasks-item-wrapper">
 							<div class="tasks-item__name">Lesson</div>
@@ -113,7 +113,7 @@
 					</div>
 				</li>
 				<li class="tasks-item tasks-item_project-2">
-					<div class="tasks-item__checkbox">&nbsp;</div>
+					<div class="tasks-item__checkbox tasks-item__checkbox_active">&nbsp;</div>
 					<div class="tasks-item-content">
 						<div class="tasks-item-wrapper">
 							<div class="tasks-item__name">Buy food in Wallmart</div>
@@ -136,7 +136,7 @@
 					</div>
 				</li>
 				<li class="tasks-item tasks-item_project-6">
-					<div class="tasks-item__checkbox">&nbsp;</div>
+					<div class="tasks-item__checkbox tasks-item__checkbox_active">&nbsp;</div>
 					<div class="tasks-item-content">
 						<div class="tasks-item-wrapper">
 							<div class="tasks-item__name">Gym</div>
@@ -162,7 +162,7 @@
 			<ul class="tasks">
 				<li class="tasks__header">29 mon</li>
 				<li class="tasks-item tasks-item_project-1">
-					<div class="tasks-item__checkbox">&nbsp;</div>
+					<div class="tasks-item__checkbox tasks-item__checkbox_active">&nbsp;</div>
 					<div class="tasks-item-content">
 						<div class="tasks-item-wrapper">
 							<div class="tasks-item__name">Lesson</div>
@@ -207,7 +207,7 @@
 					</div>
 				</li>
 				<li class="tasks-item tasks-item_project-2">
-					<div class="tasks-item__checkbox">&nbsp;</div>
+					<div class="tasks-item__checkbox tasks-item__checkbox_active">&nbsp;</div>
 					<div class="tasks-item-content">
 						<div class="tasks-item-wrapper">
 							<div class="tasks-item__name">Buy food in Wallmart</div>
@@ -728,5 +728,7 @@
 		</div>
 
 	</main>
+	<script src="vendor/jquery.min.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
