--- a/src/html/blocks/week-calendar-day.html
+++ b/src/html/blocks/week-calendar-day.html
@@ -1,8 +1,5 @@
-<div class="week-calendar-day week-calendar-day_@@text">
-    <span class="week-calendar-day__number">
-        @@number
-    </span>
-    <span class="week-calendar-day__text">
-        @@text
-    </span>
-</div>
+<input class="week-calendar__radiobutton" type="radio" name="@@name" id="@@input" @@ischecked />
+<label class="week-calendar-day" for="@@input">
+    <p class="week-calendar-day__number">@@number</p>
+    <p class="week-calendar-day__text">@@text</p>
+</label>
