--- a/client/js/app.modules/example/example.view.html
+++ b/client/js/app.modules/example/example.view.html
@@ -10,5 +10,5 @@
     }
 </style>
 <div class="example" ng-hide="isHidden" ng-click="hide()">
-    {{text}} This is example view. Click me to hide.
+    {{text | hello}} This is example view. Click me to hide.
 </div>
