[Bootstrap] - Refactor mock html files

--- a/client/today.html
+++ b/client/today.html
@@ -4,6 +4,7 @@
     @@include('./html/_head.html')
 </head>
 <body>
-    @@include('./html/blocks/menu/menu.html')
+<!--todo: remove this file in future its only for mocks-->
+@@include('./html/pages/today/page.html')
 </body>
 </html>
