--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,12 @@
-@@include('./project-task-list.html')
+<!DOCTYPE html>
+<html ng-app="doWhileApp">
+<head lang="en">
+    @@include('./html/_head.html')
+</head>
+<body>
+<div ng-view>
+</div>
+@@include('./html/pages/project/page.html')
+<script src="/js/app.js"></script>
+</body>
+</html>
