--- a/client/html/blocks/menu/menu.html
+++ b/client/html/blocks/menu/menu.html
@@ -7,9 +7,9 @@
         <a href="/today.html" class="list-item menu__today">
             today
             <div class="badge-group">
-                <i class="badge badge_circle color_yellow"></i>
-                <i class="badge badge_circle color_red"></i>
-                <i class="badge badge_circle color_green"></i>
+                <i class="badge color_yellow"></i>
+                <i class="badge color_red"></i>
+                <i class="badge color_green"></i>
             </div>
         </a>
 
