[Menu] Created header

--- a/client/html/pages/project/page.html
+++ b/client/html/pages/project/page.html
@@ -1,19 +1,16 @@
-<div class="page" ng-controller="mainCtrl">
-    @@include('../../blocks/menu/menu.html', {"mods" : "opened"})
+<div class="page">
+    @@include('../../blocks/menu/menu.html')
 
 
-    <div class="page__main">
+    <div class="page__main" ng-controller="mainCtrl">
         <!-- @@include('../../blocks/header.html', {"color" : "blue", "title" : "work", "title_icon": true}) -->
-
-        <ng-header-block is-nav-hide="isNavHide" is-project-view="{{mainPageInfo.isProjectView}}">
-            {{mainPageInfo.title}}
-        </ng-header-block>
+        <dw-header-block class="header_project-view"> Work </dw-header-block>
 
         <div class="page__task-list">
             @@include('./task-list.html')
         </div>
 
-        <div class="page__main-overlap" ng-click="isNavHide = !isNavHide">
+        <div class="page__main-overlap" ng-click="globalData.menuShowHide()">
         </div>
     </div>
 </div>
