--- a/client/html/pages/project/page.html
+++ b/client/html/pages/project/page.html
@@ -1,16 +1,19 @@
-<div class="page">
-    @@include('../../blocks/menu/menu.html')
+<div class="page" ng-controller="mainCtrl">
+    @@include('../../blocks/menu/menu.html', {"mods" : "opened"})
 
 
-    <div class="page__main" ng-controller="mainCtrl">
+    <div class="page__main">
         <!-- @@include('../../blocks/header.html', {"color" : "blue", "title" : "work", "title_icon": true}) -->
-        <dw-header-block class="header_project-view"> Work </dw-header-block>
+
+        <ng-header-block is-nav-hide="isNavHide" is-project-view="{{mainPageInfo.isProjectView}}">
+            {{mainPageInfo.title}}
+        </ng-header-block>
 
         <div class="page__task-list">
             @@include('./task-list.html')
         </div>
 
-        <div class="page__main-overlap" ng-click="globalData.menuShowHide()">
+        <div class="page__main-overlap" ng-click="isNavHide = !isNavHide">
         </div>
     </div>
 </div>
