--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html ng-app="doWhileApp">
 <head lang="en">
-    @@include('./html/_head.html')
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Do-While</title>
+    <link rel="stylesheet" href="vendor/css/normalize.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <!--[if lt IE 9]>
+        <script src="vendor/js/html5shiv.min.js"></script>
+        <script src="vendor/js/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
 <div ng-view>
