--- a/client/js/app.modules/header/dw-header-block.tpl.html
+++ b/client/js/app.modules/header/dw-header-block.tpl.html
@@ -1,5 +1,5 @@
-<header ng-controller="headerCtrl" class="header page__header">
-    <a href="" ng-click="globalData.menuShowHide()" class="header__menu-button button">
+<header ng-controller="HeaderCtrl as HeaderCtrl" class="header page__header">
+    <a href="" ng-click="HeaderCtrl.GlobalData.menuShowHide()" class="header__menu-button button">
         <i class="icon icon_hamburger icon_inverted"></i>
     </a>
 
