--- a/client/html/blocks/menu/menu.html
+++ b/client/html/blocks/menu/menu.html
@@ -1,4 +1,4 @@
-<nav class="menu page__menu" ng-controller="menuCtrl" ng-class="{menu_closed: globalData.isMenuHide}">
+<nav class="menu page__menu" ng-controller="MenuCtrl as MenuCtrl" ng-class="{menu_closed: MenuCtrl.GlobalData.isMenuHide}">
     <div class="list action-list">
         <a href="#" class="list-item list-item_small menu__settings">
             Settings
