[Js app structure] - Added menu as common module

--- a/client/js/app.modules/main/main.view.html
+++ b/client/js/app.modules/main/main.view.html
@@ -1,5 +1,6 @@
 <div class="page">
-    <!--todo menu-->
+    <dw-menu class="page__menu">
+    </dw-menu>
 
     <div class="page__main">
         <ui-view>
