[Js app structure] - Added blank modules for pages - project - today (default) - week

--- a/client/js/app.modules/main/common/menu/menu.template.html
+++ b/client/js/app.modules/main/common/menu/menu.template.html
@@ -4,7 +4,7 @@
             Settings
         </a>
 
-        <a ui-sref="todo" class="list-item menu__today">
+        <a ui-sref="main.today" class="list-item menu__today">
             today
             <div class="badge-group">
                 <i class="badge color_yellow"></i>
@@ -13,7 +13,7 @@
             </div>
         </a>
 
-        <a ui-sref="todo" class="list-item menu__next-seven-days">
+        <a ui-sref="main.week" class="list-item menu__next-seven-days">
             next 7 days
         </a>
     </div>
