[Markup & Layout] Remove radio-buttons from week block & Add styles for hover

--- a/client/html/blocks/week-day.html
+++ b/client/html/blocks/week-day.html
@@ -1,5 +1,4 @@
-<input class="week__radiobutton" type="radio" name="@@name" id="@@input" @@ischecked />
-<label class="week-day" for="@@input">
+<li class="week-day @@ischecked">
     <span class="week-day__number">@@number</span>
     <span class="week-day__text">@@text</span>
-</label>
+</li>
