--- a/client/html/blocks/week.html
+++ b/client/html/blocks/week.html
@@ -1,10 +1,10 @@
-<div class="week">
+<ul class="week">
 
-        @@include('./week-day.html', {"number" : "28", "text": "today", "name": "week-view", "input": "date-radio-1", "ischecked": "checked"})
-        @@include('./week-day.html', {"number" : "29", "text": "mon", "name": "week-view", "input": "date-radio-2", "ischecked": ""})
-        @@include('./week-day.html', {"number" : "30", "text": "tue", "name": "week-view", "input": "date-radio-3", "ischecked": ""})
-        @@include('./week-day.html', {"number" : "31", "text": "wed", "name": "week-view", "input": "date-radio-4", "ischecked": ""})
-        @@include('./week-day.html', {"number" : "1", "text": "thu", "name": "week-view", "input": "date-radio-5", "ischecked": ""})
-        @@include('./week-day.html', {"number" : "2", "text": "fri", "name": "week-view", "input": "date-radio-6", "ischecked": ""})
-        @@include('./week-day.html', {"number" : "3", "text": "sat", "name": "week-view", "input": "date-radio-7", "ischecked": ""})
-</div>
+        @@include('./week-day.html', {"number" : "28", "text": "today", "ischecked": "week-day_checked"})
+        @@include('./week-day.html', {"number" : "29", "text": "mon", "ischecked": ""})
+        @@include('./week-day.html', {"number" : "30", "text": "tue", "ischecked": ""})
+        @@include('./week-day.html', {"number" : "31", "text": "wed", "ischecked": ""})
+        @@include('./week-day.html', {"number" : "1", "text": "thu", "ischecked": ""})
+        @@include('./week-day.html', {"number" : "2", "text": "fri", "ischecked": ""})
+        @@include('./week-day.html', {"number" : "3", "text": "sat", "ischecked": ""})
+</ul>
