[Header] - Proposed event-based header -> menu comunication.

--- a/client/js/app/main/common/header/header.template.html
+++ b/client/js/app/main/common/header/header.template.html
@@ -1,5 +1,5 @@
 <header class="header color_{{color}}">
-    <div role="button" ng-click="menuClick()" class="button header__menu-button">
+    <div role="button" ng-click="header.toggleMenuVisibility()" class="button header__menu-button">
         <i class="icon icon_hamburger" ng-class="{icon_inverted: !!color}"></i>
     </div>
 
