--- a/client/js/app/main/common/menu/menu.template.html
+++ b/client/js/app/main/common/menu/menu.template.html
@@ -1,4 +1,4 @@
-<nav class="menu" ng-class="{menu_closed: !isVisible}">
+<nav class="menu" ng-class="{menu_closed: !menu.isVisible}">
     <div class="list action-list">
         <a ui-sref="todo" class="list-item list-item_small menu__settings">
             Settings
