--- a/client/js/app/main/main.view.html
+++ b/client/js/app/main/main.view.html
@@ -7,7 +7,7 @@
         <ui-view>
         </ui-view>
 
-        <div class="page__main-overlap">
+        <div class="page__main-overlap" ng-click="page.toggleMenuVisibility()">
         </div>
     </div>
 </div>
