[Layout] Change some styles use mobile first approach

--- a/client/html/blocks/menu/menu.html
+++ b/client/html/blocks/menu/menu.html
@@ -24,7 +24,7 @@
         <a href="#" class="list-item list-item_small menu__create-project">
             Create new..
         </a>
-        @@include('./project-list-item.html', { "project" : "education", "color": "green", "count" : "8","href" : "#" })
+        @@include('./project-list-item.html', { "project" : "education e", "color": "green", "count" : "8","href" : "#" })
         @@include('./project-list-item.html', { "project" : "home", "color": "red", "count" : "3", "href" : "#" })
         @@include('./project-list-item.html', { "project" : "work", "color": "blue", "count" : "2", "href" : "project-work.html" })
         @@include('./project-list-item.html', { "project" : "kids", "color": "yellow", "count" : "8", "href" : "#" })
