--- a/client/html/pages/today/task-list.html
+++ b/client/html/pages/today/task-list.html
@@ -1,8 +1,8 @@
 <ul class="list task-list">
     @@include('../../blocks/task-item.html', {
     "id" : "1",
-    "title": "Lesson",
-    "info_label": "education",
+    "title": "LessonL",
+    "info_label": "educationeducatin",
     "info_label_mod": "project",
     "project_color": "color_green",
     "checkbox_mod" : "_checked",
@@ -12,8 +12,8 @@
 
     @@include('../../blocks/task-item.html',{
     "id" : "2",
-    "title": "Do the home work",
-    "info_label": "education",
+    "title": "Do the home work Do the home w",
+    "info_label": "education education education ",
     "info_label_mod": "project",
     "project_color": "color_green",
     "checkbox_mod" : "",
