--- a/client/js/app/main/modules/project/project.view.html
+++ b/client/js/app/main/modules/project/project.view.html
@@ -1,5 +1,5 @@
-<dw-header color="'blue'">
+<dw-header color="project.color">
     <a ui-sref="todo" class="header__project">
-        work
+        {{project.name}}
     </a>
 </dw-header>
