[Menu] [Project list] - Extract project list as menu submodule.

--- a/client/js/app/main/modules/menu/menu.template.html
+++ b/client/js/app/main/modules/menu/menu.template.html
@@ -18,13 +18,9 @@
         </a>
     </div>
 
-    <div class="list project-list">
-        <div class="list__title"> projects</div>
-
-        <a ui-sref="todo" class="list-item list-item_small menu__create-project">
-            Create new..
-        </a>
-
-        <!--todo place projects here-->
-    </div>
+    <dw-project-list>
+        <dw-project-item project="{ id: 0, name: 'work', taskCount: 6, color: 'blue'}">
+        <!--todo remove hardcoded project data-->
+        </dw-project-item>
+    </dw-project-list>
 </nav>
