[Layout] Remove some unused variables & Change some styles for text-overflow

--- a/client/html/pages/project/work/page.html
+++ b/client/html/pages/project/work/page.html
@@ -2,7 +2,7 @@
     @@include('../../../blocks/menu/menu.html', {"mods" : "closed"})
 
     <div class="page__main">
-        @@include('../../../blocks/header.html', {"color" : "blue", "title" : "work work work work ", "title_icon": true})
+        @@include('../../../blocks/header.html', {"color" : "blue", "title" : "work work work work work workworkworkworkworkworkworkwork workworkworkworkwork workworkworkwork workworkwork workworkwork", "title_icon": true})
 
         <div class="page__task-list">
             @@include('../task-list.html')
