Update menu template

--- a/client/js/app/main/modules/menu/menu.template.html
+++ b/client/js/app/main/modules/menu/menu.template.html
@@ -19,8 +19,8 @@
     </div>
 
     <dw-project-list>
-        <dw-project-item project="{ id: 0, name: 'work', taskCount: 6, color: 'blue'}">
-        <!--todo remove hardcoded project data-->
+        <dw-project-item ng-repeat="project in projectList.items" project="project">
+
         </dw-project-item>
     </dw-project-list>
 </nav>
